--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fontsource/open-sans": "^5.2.6",
     "@fortawesome/fontawesome-free": "^6.7.2",
     "@headlessui/react": "^2.2.4",
+    "@material-tailwind/react": "^2.1.10",
     "gridfs-stream": "^1.1.1",
     "mongodb": "^6.17.0",
     "mongoose": "^8.15.2",
