--- a/package.json
+++ b/package.json
@@ -18,15 +18,18 @@
     "gridfs-stream": "^1.1.1",
     "mongodb": "^6.17.0",
     "mongoose": "^8.15.2",
-    "multer": "^1.4.4",
+    "multer": "^1.4.5-lts.1",
     "multer-gridfs-storage": "^5.0.2",
     "next": "15.3.3",
+    "nodemailer": "^7.0.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-pdf": "^9.2.1",
     "react-player": "^2.16.0",
+    "readable-web-to-node-stream": "^5.0.0",
     "sonner": "^2.0.5",
-    "tailwindcss-textshadow": "^2.1.3"
+    "tailwindcss-textshadow": "^2.1.3",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
