--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "postinstall": "npm install --legacy-peer-deps"
+    "lint": "next lint"
   },
   "dependencies": {
     "@deemlol/next-icons": "^0.1.9",
@@ -19,7 +18,7 @@
     "gridfs-stream": "^1.1.1",
     "mongodb": "^6.17.0",
     "mongoose": "^8.15.2",
-    "multer": "^1.4.5-lts.1",
+    "multer": "^1.4.4",
     "multer-gridfs-storage": "^5.0.2",
     "next": "15.3.3",
     "nodemailer": "^7.0.4",
