--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/fontawesome-free": "^6.7.2",
     "@headlessui/react": "^2.2.4",
     "@material-tailwind/react": "^2.1.10",
+    "@types/styled-components": "^5.1.34",
     "gridfs-stream": "^1.1.1",
     "mongodb": "^6.17.0",
     "mongoose": "^8.15.2",
@@ -28,6 +29,7 @@
     "react-player": "^2.16.0",
     "readable-web-to-node-stream": "^5.0.0",
     "sonner": "^2.0.5",
+    "styled-components": "^6.1.19",
     "tailwindcss-textshadow": "^2.1.3",
     "uuid": "^11.1.0"
   },
