--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -19,7 +19,7 @@
     "gridfs-stream": "^1.1.1",
     "mongodb": "^6.17.0",
     "mongoose": "^8.15.2",
-    "multer": "^1.4.4",
+    "multer": "^2.0.1",
     "multer-gridfs-storage": "^5.0.2",
     "next": "15.3.3",
     "nodemailer": "^7.0.4",
