--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "nodemailer": "^7.0.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-pageflip": "^2.0.3",
     "react-pdf": "^9.2.1",
     "react-player": "^2.16.0",
     "readable-web-to-node-stream": "^5.0.0",
