--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@deemlol/next-icons": "^0.1.9",
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
     "@fontsource-variable/merriweather": "^5.2.4",
     "@fontsource/open-sans": "^5.2.6",
     "@fortawesome/fontawesome-free": "^6.7.2",
