--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@headlessui/react": "^2.2.4",
     "@material-tailwind/react": "^2.1.10",
     "@types/styled-components": "^5.1.34",
+    "@vercel/analytics": "^1.5.0",
     "gridfs-stream": "^1.1.1",
     "mongodb": "^6.17.0",
     "mongoose": "^8.15.2",
